# left-right-brain-compat-bot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  results.json  sampleData.json  testfile.json  top_cryptos.json
.cache/41/: cache.db
adapters/: results.json  results_reply.json  twitter.py  twitterSelected.py  whiteLists.txt
agents/: data.txt  embeddings.py  selector.py  summarizer.py
docs/: README.md
funcs/: searchOnGoogle.py
proposses_data/: StanceCalculation.py  Varility_Score.py  conflict_analysis.py  importance_calculator.py  json_to_polars.py  web_scraping_crypto.py
tests/: 11.py  twitterTests.py
utils/: sentiment.py
